Fixed content Misalignments + Scrolling Request - All elements now aligned for views - The scroll bar now is split vertically    - The scrollbar bg is now transparent for better look    - The scroll area is now only underneath NOT including of the image  - The gradient type for edit section (sub-sections) has been added

--- a/resources/css/application.css
+++ b/resources/css/application.css
@@ -13,6 +13,11 @@
     -fx-background-color: linear-gradient(to bottom right, rgba(0,50,255,0.75) 10%, rgba(128, 0, 0, 0.87) 100%);
 }
 
+/* Orange gradient */
+.orange-sidebar {
+    -fx-background-color: linear-gradient(to bottom right, rgba(0,50,255,0.75) 10%, rgba(242, 140, 40, 0.87) 100%);
+}
+
 .imgPanel {
     -fx-background-color: rgba(0, 0, 0, 0.02);
     -fx-background-radius: 30;
@@ -81,21 +86,26 @@
     -fx-text-fill: white;
 }
 
-
-.scroll-bar:horizontal .track,
-.scroll-bar:vertical .track {
-    -fx-background-color: #ffffff;
-    -fx-border-color: transparent;
-    -fx-background-radius: 0.0em;
+.scroll-pane {
+    -fx-background: transparent;
+    -fx-background-color: transparent;
 }
 
+.scroll-pane .viewport {
+    -fx-background: transparent;
+}
+
+.scroll-bar:horizontal,
+.scroll-bar:vertical {
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+}
 
 .scroll-bar:horizontal .increment-button ,
 .scroll-bar:horizontal .decrement-button {
     -fx-background-color :transparent;
     -fx-background-radius : 0.0em;
     -fx-padding :0.0 0.0 10.0 0.0;
-
 }
 
 .scroll-bar:vertical .increment-button ,
@@ -120,13 +130,13 @@
 
 .scroll-bar:horizontal .thumb,
 .scroll-bar:vertical .thumb {
-    -fx-background-color :derive(black,80.0%);
+    -fx-background-color :derive(black,70.0%);
     -fx-background-insets: 2.0, 0.0, 0.0;
     -fx-background-radius: 2.0em;
 }
 
 .scroll-bar:horizontal .thumb:hover,
 .scroll-bar:vertical .thumb:hover {
-    -fx-background-color :derive(black,100.0%);
+    -fx-background-color :derive(black,80.0%);
 }
 
